# spellmpt-server

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/handler/: auth.rs  block.rs  mod.rs  prompt.rs  user.rs
api/src/service/: block.rs  mod.rs  prompt.rs  user.rs
config/: Cargo.toml
config/src/: contants.rs  lib.rs
core/: Cargo.toml
entity/: Cargo.toml
entity/src/entities/: block.rs  mod.rs  prelude.rs  prompt.rs  tag.rs  taggable.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230310_032859_create_user_table.rs  m20230311_104539_create_block.rs  m20230405_111835_create_prompt_table.rs  m20230405_142124_create_tag_table.rs  m20230405_142700_create_taggings_table.rs
src/: main.rs
