[package]
name = "reels-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-json", "with-uuid", "postgres-array" ] }
migration = { path = "../migration" }
entity = { path = "../entity" }
